--- a/WebServiceAndConsumingWithWebForms-2022-B/WebServiceAndConsumingWithWebForms-2022-B.csproj
+++ b/WebServiceAndConsumingWithWebForms-2022-B/WebServiceAndConsumingWithWebForms-2022-B.csproj
@@ -76,6 +76,7 @@
       <DependentUpon>WebServiceCalc-2022-B.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="WebServiceResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
